ethereum-2/prometheus/svc-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ethereum-2
  labels:
    app.kubernetes.io/name: prometheus
spec:
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - name: metrics
    port: 9090
    targetPort: metrics
